<resources>
    <string name="app_name">fcctut</string>
    <string name="your_trips">Your Trips</string>
    <string name="plus">+</string>
    <string name="addbutton">addbutton</string>
    <string name="addtrip">addtrip</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="_1_jan_2023">1 Jan 2023</string>

    <string-array name="places_details_addresses">
        <item>Address1</item>
        <item>Address2</item>
        <item>Address3</item>
        <item>Address4</item>

    </string-array>

    <string-array name="places_details_opening_hours">
        <item>Opening Hours 1</item>
        <item>Opening Hours 2</item>
        <item>Opening Hours 3</item>
        <item>Opening Hours 4</item>


    </string-array>


    <string-array name="places_details_addresses">
        <item>Address1</item>
        <item>Address2</item>
        <item>Address3</item>
        <item>Address4</item>

    </string-array>

    <string-array name="places_details_opening_hours">
        <item>Opening Hours 1</item>
        <item>Opening Hours 2</item>
        <item>Opening Hours 3</item>
        <item>Opening Hours 4</item>


    </string-array>


    <!-- Strings used for login page -->
    <string name="Tripgenie">TripGenie</string>
    <string name="Username">Username</string>
    <string name="Signinwithgoogle">Sign in with google</string>
    <string name="Donthaveanaccount">Don\'t have an account?</string>
    <string name="login">LOGIN </string>
    <string name="Signintext">SIGN IN </string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <!-- Strings used for signup page -->
    <string name="Signuptext">SIGN UP </string>
    <string name="Signupemail">Email </string>

    <!-- Strings used for homepage -->
    <string name="EditProfile">Edit Profile</string>
    <string name="changeusername">Username</string>
    <string name="Logout">Logout</string>

    <!-- Strings used for edituserpage -->
    <string name="empty_edit_text">emptyedittext</string>
    <string name="changeprofilephoto">Change Profile Photo</string>

    <!-- Strings used for signupage -->
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Confirmpassword">Confirm Password</string>
    <string name="Alreadyamember">Already a member?</string>
    <string name="Donthaveanaccountt">Don\'t have an account?</string>
    <string name="Loggin">Log in</string>
    <string name="SetUsername">Set Username</string>




</resources>