<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpPage">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/Signuptext"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"  />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Signupemail" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/Password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/addbutton"
        android:text="@string/Signuptext"
        android:textSize="20sp"
        android:textAllCaps="false" />
</LinearLayout>